--- a/egs/sabina/tts1/Makefile
+++ b/egs/sabina/tts1/Makefile
@@ -15,6 +15,9 @@ exp_dir=$(tts_dir)/espnet/egs/sabina/tts1
 logs:
 	$(SSH_CMD) "cd $(exp_dir) && tail -f exp/char_train_no_dev_pytorch_train_pytorch_tacotron2/train.log"
 
+nvidia:
+	$(SSH_CMD) "watch nvidia-smi"
+
 tensorboard:
 	$(SSH_TF_CMD) "source ~/miniconda3/etc/profile.d/conda.sh;conda activate tts; \
 		cd $(exp_dir); pwd; \
