Make configurable experiment

--- a/egs/sabina/tts1/Makefile
+++ b/egs/sabina/tts1/Makefile
@@ -11,9 +11,11 @@ SSH_JN_CMD=ssh -L 8888:localhost:8888 -p $(SSH_PORT) -t $(USER)@$(SERVER_URL)
 #####################################################################################
 tts_dir=$(HOME_DIR)/gfs/tts
 exp_dir=$(tts_dir)/espnet/egs/sabina/tts1
+exp=char_train_no_dev_pytorch_train_pytorch_transformer.v3.single
+# exp=char_train_no_dev_pytorch_train_pytorch_tacotron2
 #####################################################################################
 logs:
-	$(SSH_CMD) "cd $(exp_dir) && tail -f exp/char_train_no_dev_pytorch_train_pytorch_tacotron2/train.log"
+	$(SSH_CMD) "cd $(exp_dir) && tail -f exp/$(exp)/train.log"
 
 nvidia:
 	$(SSH_CMD) "watch nvidia-smi"
@@ -21,7 +23,7 @@ nvidia:
 tensorboard:
 	$(SSH_TF_CMD) "source ~/miniconda3/etc/profile.d/conda.sh;conda activate tts; \
 		cd $(exp_dir); pwd; \
-		tensorboard --logdir tensorboard/char_train_no_dev_pytorch_train_pytorch_tacotron2/"	
+		tensorboard --logdir tensorboard/$(exp)/"	
 
 jupyter:
 	$(SSH_JN_CMD) "source ~/miniconda3/etc/profile.d/conda.sh;conda activate tts; \
